--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ nbproject/project.properties
 nbproject/project.properties
 nbproject/project.properties
 nbproject/project.properties
+nbproject/project.properties
