--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ nbproject/build-impl.xml
 nbproject/genfiles.properties
 nbproject/private/private.properties
 nbproject/project.xml
+/nbproject/private/
