--- a/src/fr/afpa/librairie/resources/dao.properties
+++ b/src/fr/afpa/librairie/resources/dao.properties
@@ -1,4 +1,5 @@
-url = jdbc:mysql://localhost:3306/bdd_sdzee
-driver = com.mysql.jdbc.Driver
-nomutilisateur = java
-motdepasse = $dZ_\u00a3E
+url = jdbc:sqlserver://PLTZ857:1433;databaseName=bdd_librairie
+#driver = com.mysql.jdbc.Driver
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+nomutilisateur = sa
+motdepasse = sa
