--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=afpa-librairie
+application.vendor=cdi305
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,11 +28,13 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/afpa-librairie.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.afpa-librairie-src=src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.SQLS4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,3 +75,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=${file.reference.afpa-librairie-src}
+src.src.dir=src
+test.test.dir=test
