Demande "SQLS4" en ouvrant le projet sur NetBeans
Tout le monde n'a pas nommé son SQLS "SQLS4" du coup ça fonctionne pas
trop trop :)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,8 +33,7 @@ excludes=
 file.reference.afpa-librairie-src=src
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.SQLS4.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
