--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,7 @@ file.reference.afpa-librairie-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.SQLS4.classpath}
+    ${libs.SQLS.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
