List and XML daos
Commit concernant les dao list et xml

Elle introduit aussi l'implementation des controller & verifier

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=afpa-librairie
-application.vendor=cdi305
+application.vendor=caill
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,14 +30,13 @@ dist.jar=${dist.dir}/afpa-librairie.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.afpa-librairie-src=src
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.SQLS.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -74,6 +73,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.afpa-librairie-src}
 src.src.dir=src
 test.test.dir=test
