--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,4 +75,6 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.src.dir=src
+src.src2.dir=src
 test.test.dir=test
+test.test2.dir=test
