--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ nbproject/project.properties
 nbproject/project.properties
 nbproject/project.properties
 nbproject/project.properties
+/src/nbproject/private/
+/afpa-librairie/nbproject/private/
+/afpa-librairie/build/
