ignore properties et nullpointerexception

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ nbproject/project.properties
 /src/nbproject/private/
 /afpa-librairie/nbproject/private/
 /afpa-librairie/build/
+src/fr/afpa/librairie/resources/dao.properties
