--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ nbproject/project.properties
 /afpa-librairie/nbproject/private/
 /afpa-librairie/build/
 src/fr/afpa/librairie/resources/dao.properties
+src/fr/afpa/librairie/resources/dao.properties
