--- a/src/fr/afpa/librairie/resources/dao.properties
+++ b/src/fr/afpa/librairie/resources/dao.properties
@@ -1,9 +1,10 @@
-url = jdbc:sqlserver://SRVPROD;InstanceName=ADMSRV;databaseName=bdd_librairie
+#url = jdbc:sqlserver://SRVPROD;InstanceName=ADMSRV;databaseName=bdd_librairie
+url = jdbc:sqlserver://PLTZ857:1433;databaseName=bdd_librairie
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+nomutilisateur = sa
+motdepasse = sa
+
 #jdbc:sqlserver://PLTZ826:1433;databaseName=bdd_librairie
 #driver = com.mysql.jdbc.Driver
-driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-nomutilisateur = dev1
-motdepasse = Stine1!?
-
-
-
+#nomutilisateur = dev1
+#motdepasse = Stine1!?
