--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,7 +69,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-splash:src/fr/afpa/librairie/resources/images/200.gif
+run.jvmargs=-splash:src/fr/afpa/librairie/resources/images/splashscreen.png
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
